tests/errors/semantic/E008_mod.zy
# E008_mod {
    #> { public_fn }

    public_fn() { <~ "public" }
    private_fn() { <~ "private" }
}
